config/clusters/azureks-example/spec-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: co-specific-azure
  labels:
    owner: cloud-ops
