config/clusters/azureks-example/team-beta.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-beta-test
  labels:
    company: mycompany
    tenant: tenant-b
    application: app
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ResourceQuota
  metadata:
    name: pods-high
    namespace: team-beta-test
  spec:
    hard:
      cpu: "10"
      memory: 200Gi
      pods: "10"
    scopeSelector:
      matchExpressions:
      - operator : In
        scopeName: PriorityClass
        values: ["high"]
- apiVersion: v1
  kind: ResourceQuota
  metadata:
    name: pods-medium
    namespace: team-beta-test
  spec:
    hard:
      cpu: "5"
      memory: 20Gi
      pods: "10"
    scopeSelector:
      matchExpressions:
      - operator : In
        scopeName: PriorityClass
        values: ["medium"]
- apiVersion: v1
  kind: ResourceQuota
  metadata:
    name: pods-low
    namespace: team-beta-test
  spec:
    hard:
      cpu: "1"
      memory: 10Gi
      pods: "10"
    scopeSelector:
      matchExpressions:
      - operator : In
        scopeName: PriorityClass
        values: ["low"]
- apiVersion: v1
  kind: ResourceQuota
  metadata:
    name: object-quota
    namespace: team-beta-test
  spec:
    hard:
      pods: 30
      persistentvolumeclaims: 15
      replicationcontrollers: 0
      resourcequotas: 1
      services: 20
      services.loadbalancers: 0
      services.nodeports: 0
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: team-beta-test
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: team-beta-test
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-isolation
  namespace: team-beta-test
spec:
  podSelector:
    matchLabels: 
      tenant: tenant-b
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tenant: tenant-b
    ports:
    - port: 80
